# LocalDecodeManager

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: EncodeBoundarySchema.cpp  LocalDecoder.cpp  LocalEncoder.cpp  LocalSplitter.cpp  PartialDecoder.cpp  PartialEncoder.cpp
src/include/: BufferUtils.h  EncodeBoundarySchema.h  Graph.h  LocalDecodeManager.h  LocalDecoder.h  LocalEncoder.h  LocalSplitter.h  PartialDecoder.h  PartialEncoder.h  biops.h  syncbitops.h
tools/: CGALTest.cpp  LocalDecoderTest.cpp  LocalEncoderTest.cpp  LocalSplitterTest.cpp  MCGAL_Test.cpp  PartialDecoderTest.cpp  PartialEncoderTest.cpp
